# tools.biodiversity.cz

./: Dockerfile  README.md  dev.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  webpack.config.js
.github/: dependabot.yml
.github/workflows/: publish.yml
app/: app.py
app/templates/: index.html
assets/: app.js
assets/js/: dwcInputs.js  ui.js
assets/scss/: barcode.scss  index.scss  print.scss  sheet.scss  variables.scss
htdocs/: __init__.py  config.py
htdocs/routes/: herbarium.py  main.py
htdocs/static/herbarium/: slideLableGeneratorTemplate.xlsx
htdocs/templates/: base.html  index.html
htdocs/templates/herbarium/: barcodeGenerator.html  demusConvertor.html  museionConvertor.html  sheetGenerator.html  slideLabels.html
